update index page

--- a/src/components/widgets/About.astro
+++ b/src/components/widgets/About.astro
@@ -22,4 +22,7 @@ const { Content } = hasContent && aboutEntry ? await render(aboutEntry) : { Cont
   .about:not(:empty) {
     margin-bottom: 1.25rem;
   }
+  .prose{
+    font-size: 1.1rem;
+  }
 </style>
