--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -9,7 +9,7 @@ import type { LayoutProps } from '@/types'
 type Props = LayoutProps
 
 const { type = 'page' } = Astro.props
-const language = themeConfig.site.language || 'en-US'
+const language = themeConfig.site.language || 'zh-CN'
 const contentWidth = themeConfig.general.contentWidth
 const fadeAnimation = themeConfig.general.fadeAnimation
 const widthValue = Math.min(parseFloat(contentWidth), 50)
