--- a/src/layouts/IndexLayout.astro
+++ b/src/layouts/IndexLayout.astro
@@ -10,6 +10,15 @@ import { themeConfig } from '@/config'
 const { title, description } = Astro.props
 ---
 
+<!-- Preload -->
+<link
+  rel="preload"
+  href="/fonts/EarlySummer-VF-Index.woff2"
+  as="font"
+  type="font/woff2"
+  crossorigin
+/>
+
 <BaseLayout title={title} description={description} type="page">
   <BaseHead title={title} description={description} slot="head" />
   <div class="page-content">
@@ -35,6 +44,7 @@ const { title, description } = Astro.props
     flex: 1;
     display: flex;
     flex-direction: column;
+    font-family: 'EarlySummer-Index', 'Georgia', 'Cambria', 'Times New Roman', 'Times', 'serif';
   }
 
   .page-content main {
