--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -109,7 +109,7 @@ body {
   font-family: var(--sans);
   font-feature-settings: 'ss03' 1;
   font-size: var(--font-size-m);
-  text-autospace: normal;
+  /* text-autospace: normal; */
   text-rendering: optimizeLegibility;
   line-height: 1.75;
   color: var(--text-primary);
