--- a/src/layouts/IndexLayout.astro
+++ b/src/layouts/IndexLayout.astro
@@ -44,7 +44,7 @@ const { title, description } = Astro.props
     flex: 1;
     display: flex;
     flex-direction: column;
-    font-family: 'EarlySummer-Index', 'Georgia', 'Cambria', 'Times New Roman', 'Times', 'serif';
+    font-family: 'EarlySummer-Index', var(--sans);
   }
 
   .page-content main {
