--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -36,6 +36,7 @@ const today = new Date()
     flex-direction: row;
     flex-wrap: nowrap;
     width: 100%;
+    font-family: "EarlySummerSerif", var(--sans);
   }
 
   .copyright,
