--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -25,5 +25,6 @@ import ThemeToggle from '@/components/ui/ThemeToggle.astro'
     text-decoration: none;
     min-width: 3rem;
     display: inline-block;
+    font-family: "EarlySummerSerif", var(--sans);
   }
 </style>
