--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -22,7 +22,7 @@
 
 /* UI Character Index of EarlySummerSerif Variable Font */
 @font-face {
-  font-family: "EarlySummer-Index";
+  font-family: "EarlySummerSerif";
   src: url("/fonts/EarlySummerSerif-VF.woff2") format("woff2-variations");
   font-display: swap;
   font-weight: 400 700;
