--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,6 +14,7 @@
 
   --font-size-s: 0.8125rem;
   --font-size-m: 0.9375rem;
+  --font-size-m1: 1rem;
   --font-size-l: 1.0625rem;
 
   --font-weight-light: 350;
