--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -2,7 +2,7 @@
 .prose * {
   margin: 0;
   padding: 0;
-  font-size: var(--font-size-l);
+  font-size: var(--font-size-m1);
 }
 
 /* Main content container */
@@ -26,7 +26,7 @@
 .prose h3,
 .prose h4,
 .prose h5 {
-  font-size: var(--font-size-l);
+  font-size: var(--font-size-m1);
   font-weight: var(--font-weight-bold);
   line-height: 1.75;
   margin: 3.75em 0 1.75em 0;
@@ -71,7 +71,7 @@
   border-collapse: separate;
   border-spacing: 0;
   margin: 1.75em 0;
-  font-size: var(--font-size-l);
+  font-size: var(--font-size-m1);
   border: 1px solid var(--border);
   border-radius: 8px;
   overflow: hidden;
@@ -420,7 +420,7 @@
 .prose [data-footnote-backref] {
   position: relative;
   font-family: var(--mono);
-  font-size: var(--font-size-l);
+  font-size: var(--font-size-m1);
   top: -0.05em;
 }
 
