--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -12,10 +12,9 @@ const today = new Date()
       </span>
       {themeConfig.site.author}
     </div>
-    <div class="powered-by">
-      Powered by{' '}
-      <a href="https://astro.build">Astro</a> &{' '}
-      <a href="https://github.com/the3ash/astro-chiri">Chiri</a>
+    <div class="also-mine">
+      &#10149; {' '}
+      <a href="https://infja.com">infja.com</a>
     </div>
   </div>
 </footer>
@@ -39,7 +38,7 @@ const today = new Date()
   }
 
   .copyright,
-  .powered-by {
+  .also-mine {
     white-space: nowrap;
   }
 
