--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -13,9 +13,8 @@ const today = new Date()
       {themeConfig.site.author}
     </div>
     <div class="powered-by">
-      Powered by{' '}
-      <a href="https://astro.build">Astro</a> &{' '}
-      <a href="https://github.com/the3ash/astro-chiri">Chiri</a>
+      &#10148;{' '}
+      <a href="https://infja.com">infja.com</a>
     </div>
   </div>
 </footer>
