--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -12,7 +12,7 @@ const today = new Date()
       </span>
       {themeConfig.site.author}
     </div>
-    <div class="powered-by">
+    <div class="also-mine">
       &#10148;{' '}
       <a href="https://infja.com">infja.com</a>
     </div>
@@ -38,7 +38,7 @@ const today = new Date()
   }
 
   .copyright,
-  .powered-by {
+  .also-mine {
     white-space: nowrap;
   }
 
