--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -24,5 +24,7 @@ import ThemeToggle from '@/components/ui/ThemeToggle.astro'
     text-decoration: none;
     min-width: 3rem;
     display: inline-block;
+    font-size: 1.4rem;
+    font-family: "EarlySummerSerif", var(--sans);
   }
 </style>
