--- a/src/components/ui/BackButton.astro
+++ b/src/components/ui/BackButton.astro
@@ -11,7 +11,7 @@ import { themeConfig } from '@/config'
       stroke-linecap="round"
       stroke-linejoin="round"></path>
   </svg>
-  index
+  西墙
 </a>
 
 <script
@@ -79,7 +79,7 @@ import { themeConfig } from '@/config'
     align-items: center;
     gap: 0.375rem;
     font-family: var(--serif);
-    font-size: var(--font-size-m);
+    font-size: var(--font-size-c);
     font-style: italic;
     letter-spacing: 0;
     line-height: 1.75;
@@ -93,6 +93,7 @@ import { themeConfig } from '@/config'
     left: -0.175em;
     transition: color 0.2s ease-out;
     text-decoration: none;
+    font-family: "EarlySummerSerif", var(--sans);
   }
 
   .back-button:hover {
