--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,6 +15,7 @@
   --font-size-s: 0.8125rem;
   --font-size-m: 0.9375rem;
   --font-size-l: 1.0625rem;
+  --font-size-c: 1rem;
 
   --font-weight-light: 350;
   --font-weight-regular: 400;
