--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -2,7 +2,7 @@
 .prose * {
   margin: 0;
   padding: 0;
-  font-size: var(--font-size-m);
+  font-size: var(--font-size-c);
 }
 
 /* Main content container */
@@ -26,7 +26,7 @@
 .prose h3,
 .prose h4,
 .prose h5 {
-  font-size: var(--font-size-m);
+  font-size: var(--font-size-c);
   font-weight: var(--font-weight-bold);
   line-height: 1.75;
   margin: 3.75em 0 1.75em 0;
