--- a/src/components/ui/BackButton.astro
+++ b/src/components/ui/BackButton.astro
@@ -93,6 +93,7 @@ import { themeConfig } from '@/config'
     left: -0.175em;
     transition: color 0.2s ease-out;
     text-decoration: none;
+    font-family: "EarlySummerSerif", var(--sans);
   }
 
   .back-button:hover {
