--- a/src/components/layout/BaseHead.astro
+++ b/src/components/layout/BaseHead.astro
@@ -24,6 +24,13 @@ const imageUrl = ogImage ? new URL(ogImage, Astro.url) : new URL('/og/chiri-og.p
   type="font/woff2"
   crossorigin="anonymous"
 />
+<link
+  rel="preload"
+  href="/fonts/EarlySummerSerif-VF.woff2"
+  as="font"
+  type="font/woff2"
+  crossorigin="anonymous"
+/>
 <link rel="sitemap" href="/sitemap-index.xml" />
 <link
   rel="alternate"
