--- a/src/components/widgets/PostList.astro
+++ b/src/components/widgets/PostList.astro
@@ -44,6 +44,7 @@ const { posts } = Astro.props as PostListProps
     display: flex;
     flex-direction: column;
     gap: 0;
+    font-size: var(--font-size-l);
   }
 
   a {
